# aider-nix

./: README.md  flake.nix  home-module.nix  pyproject.toml
