[project]
name = "aider-nix"
version = "0.85.1"
description = "Environment definition for aider-chat for use with Nix"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["aider-chat==0.85.1"]

[project.optional-dependencies]
help = ["aider-chat[help]==0.85.1"]
playwright = ["aider-chat[playwright]==0.85.1"]
browser = ["aider-chat[browser]==0.85.1"]
all = ["aider-chat[help,playwright,browser]==0.85.1"]
